validation to sign up form and forget password form

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,17 @@
 
     <title>Rosca - India's only 'No Comission' chit fund, chitty, kuri, bhishi.</title>
   </head>
+  <style>
+    .errorlist{
+        color:red;
+        list-style-type: none;
+    }
+
+    ul{
+    list-style-type: none;
+    }
+</style>
+
   <body>
 
 
