--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -2,6 +2,6 @@
 
 {% block body  %}
   <p>
-    Your password has been set. You may go ahead and <a href="www.therosca.in/login">login</a> now.
+    Your password has been set. You may go ahead and <a href="https://www.therosca.in/login">login</a> now.
   </p>
 {% endblock body %}
