--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
 {% block body  %}
+<div style="text-align: center;">
   {% if validlink %}
+
     <h3>Change password</h3>
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Change password</button>
+      <button class='btn btn-primary' type="submit">Change password</button>
     </form>
+
   {% else %}
     <p>
       The password reset link was invalid, possibly because it has already been used.
       Please request a new password reset.
     </p>
   {% endif %}
+  </div>
 {% endblock body %}
