--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,7 +3,7 @@
 {% block body  %}
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.
+    You should receive them shortly. Please check spam and promotional folders if you didn't receive an email.
   </p>
   <p>
     If you don't receive an email, please make sure you've entered the address you registered with,
