--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 
 {% block body  %}
+<style>
+    .errorlist{
+        color:red;
+        list-style-type: none;
+    }
+</style>
 <div class="container">
 	<div class="row">
 		<div class="col-md-4 col-md-offset-4">
